--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "preview": "astro preview"
   },
   "dependencies": {
-    "astro": "^4.0.0"
+    "@astrojs/vercel": "^7.0.0",
+    "@supabase/supabase-js": "^2.39.0",
+    "astro": "^4.0.0",
+    "nanoid": "^5.0.4",
+    "razorpay": "^2.9.2"
   }
 }
