--- a/vercel.json
+++ b/vercel.json
@@ -1,18 +1,11 @@
 {
   "version": 2,
   "buildCommand": "npm run build",
-  "outputDirectory": "dist",
+  "outputDirectory": ".vercel/output",
+  "framework": "astro",
   "public": false,
   "cleanUrls": true,
   "trailingSlash": true,
-  "functions": {
-    "api/**/*.ts": {
-      "runtime": "nodejs20.x"
-    },
-    ".vercel/output/functions/**/*.func/*": {
-      "runtime": "nodejs20.x"
-    }
-  },
   "headers": [
     {
       "source": "/api/(.*)",
