Add session management, email notifications, and upcoming appointments highlighting
Features added:
- Session completion with 'Mark Complete' button in admin dashboard
- Automatic feedback request sent 2 hours after session completion
- Email notifications for new bookings (using Resend)
- Highlight today's and tomorrow's appointments
- New session_status field in database
- Track feedback sent status
- Admin notes field for internal tracking
- Improved admin dashboard UI with session status badges

--- a/.env.example
+++ b/.env.example
@@ -44,8 +44,17 @@ GTM_CONTAINER_ID=GTM-XXXXXXX
 # Password for admin login at /admin/login
 ADMIN_PASSWORD=your_secure_admin_password_here
 
+# Admin email for booking notifications
+ADMIN_EMAIL=admin@psychologyzone.in
+
 # Session token (auto-generated, leave empty)
 ADMIN_SESSION_TOKEN=
+
+# ===========================================
+# EMAIL NOTIFICATIONS (RESEND)
+# ===========================================
+# Get from: https://resend.com/api-keys
+RESEND_API_KEY=re_xxxxxxxxxxxxxxxxxxxxxxxxxxxx
 
 # ===========================================
 # SITE CONFIGURATION
